Update README and typo in file/directory names

--- a/BusinessApi/Properties/launchSettings.json
+++ b/BusinessApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "BusinesssApi": {
+    "BusinessApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
